<resources>
    <string name="app_name">TareaLabo3</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="hint_gender">gender</string>
    <string name="btn_share">share</string>
    <string name="string_user_new">USER:</string>
    <string name="string_pass_new">PASS:</string>
    <string name="string_email_new">EMAIL:</string>
    <string name="string_gender_new">GENDER:</string>
</resources>