<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/normal_padding"
    android:orientation="vertical"
    tools:context="com.example.salomoncastro.tarealabo3.MainActivity">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mid_margin"
        android:hint="@string/hint_username"
        android:textSize="@dimen/text_size_mid"
        android:gravity="center"/>

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mid_margin"
        android:textSize="@dimen/text_size_mid"
        android:hint="@string/hint_password"
        android:gravity="center"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_mid"
        android:layout_margin="@dimen/mid_margin"
        android:hint="@string/hint_email"
        android:gravity="center"/>

    <EditText
        android:id="@+id/et_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_mid"
        android:layout_margin="@dimen/mid_margin"
        android:hint="@string/hint_gender"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_share"
        android:textSize="@dimen/btn_text_mid"
        android:layout_margin="@dimen/mid_margin"/>

</LinearLayout>
